<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">
    <TextView
        android:id="@+id/tv_txt_preview"
        android:text="@string/preview"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/set_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_font"
        android:layout_below="@id/tv_txt_preview"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />
    <Spinner
        android:id="@+id/sp_select_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/fonts"
        android:layout_below="@id/set_font"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        ></Spinner>
    <TextView
        android:id="@+id/set_mode"
        android:text="@string/set_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp_select_font"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <RadioGroup
        android:id="@+id/rg_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_below="@id/set_mode"
        android:gravity="center"
        >
        <RadioButton
            android:id="@+id/rb_mode_day"
            android:text="@string/mode_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb_mode_night"
            android:text="@string/mode_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/set_linespace"
        android:text="@string/set_linespace"
        android:layout_below="@id/rg_mode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/sb_linespace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_linespace"
        android:layout_margin="10dp"
        android:max="50"
        android:progress="10"
        />
    <TextView
        android:id="@+id/set_fontsize"
        android:text="@string/set_fontsize"
        android:layout_below="@id/sb_linespace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/sb_fontsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_fontsize"
        android:layout_margin="10dp"
        android:max="50"
        android:progress="20"
        />
</RelativeLayout>