<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Search">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        >
        <TextView
            android:id="@+id/tv_result_chapter_title"
            android:layout_width="0dp"
            android:text="@string/chapter_title"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            />
        <TextView
            android:id="@+id/tv_result_section_title"
            android:text="@string/section_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/lv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layoutDirection="rtl"
        ></ListView>
    <RadioGroup
        android:id="@+id/rg_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layoutDirection="rtl"
        >
        <RadioButton
            android:id="@+id/rb_titles"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_titles"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb_texts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_texts"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/img_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:src="@android:drawable/ic_menu_search"
            />
        <EditText
            android:id="@+id/et_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:hint="@string/search"
            />
    </LinearLayout>


</LinearLayout>